# Pill_dispenser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  motor.c  motor.h  motor_control.c  motor_control.h
src/: CMakeLists.txt  buttons.c  buttons.h  dispenser.c  dispenser.h  dispenser_control.c  dispenser_control.h  lora.c  lora.h  lora_msg.c  lora_msg.h  main.c  motor_control.c  motor_control.h  pill_dispenser_sm.c  pill_dispenser_sm.h  storage.c  storage.h
src/drivers/: button.h  dispenser.c  dispenser.h  eeprom.c  eeprom.h  isr.h  led.c  led.h  lora.c  lora.h  piezo_sensor.c  piezo_sensor.h  stepper_motor.c  stepper_motor.h
src/drivers/uart_irq/: uart.h
src/lib/: debug.c  debug.h  eeprom.c  eeprom.h
src/utils/: debug.c  debug.h
test/: CMakeLists.txt  test_button.c  test_clear_mem.c  test_debug_msg.c  test_example.c  test_lora.c  test_piezo.c  test_storage.c
